--- a/app/src/main/res/layout/fragment_chat_list_item_me.xml
+++ b/app/src/main/res/layout/fragment_chat_list_item_me.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginEnd="12dp"
-    android:layout_marginStart="48dp"
-    android:layout_marginTop="4dp"
-    android:clipChildren="false"
-    android:orientation="horizontal">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_marginEnd="12dp"
+              android:layout_marginStart="48dp"
+              android:layout_marginTop="4dp"
+              android:clipChildren="false"
+              android:orientation="horizontal">
 
     <LinearLayout
         android:layout_width="150dp"
@@ -26,7 +26,7 @@
             android:layout_marginStart="2dp"
             android:gravity="end|center_vertical"
             android:scaleType="centerInside"
-            android:src="@drawable/delivered_chat" />
+            android:src="@drawable/delivered_chat"/>
 
         <TextView
             android:id="@+id/chat_user_time"
@@ -35,7 +35,7 @@
             android:gravity="center_vertical|end"
             android:textColor="@color/seperator_color"
             android:textSize="@dimen/sub_font_size"
-            tools:text="3:00AM" />
+            tools:text="3:00AM"/>
 
     </LinearLayout>
 
@@ -44,33 +44,81 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.linute.linute.UtilsAndHelpers.SquareFrameLayout
+        <LinearLayout
             android:id="@+id/frame"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:visibility="gone">
+            android:background="@drawable/chat_item_me"
+            android:clipChildren="true"
+            android:orientation="vertical"
+            android:visibility="visible">
 
-            <com.makeramen.roundedimageview.RoundedImageView
-                android:id="@+id/image"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:scaleType="centerCrop"
-                app:riv_corner_radius="@dimen/user_icon_corner_radius" />
+            <FrameLayout
+                android:layout_width="160dp"
+                android:layout_height="160dp">
 
-            <ImageView
-                android:id="@+id/cinema_icon"
-                android:layout_width="wrap_content"
+                <com.makeramen.roundedimageview.RoundedImageView
+                    android:id="@+id/image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    app:riv_corner_radius="@dimen/user_icon_corner_radius"
+                />
+
+                <ImageView
+                    android:id="@+id/cinema_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_cinema"/>
+
+            </FrameLayout>
+
+            <LinearLayout
+                android:id="@+id/action_bar"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_cinema" />
+                android:orientation="horizontal">
 
-        </com.linute.linute.UtilsAndHelpers.SquareFrameLayout>
+                <com.makeramen.roundedimageview.RoundedImageView
+                    android:id="@+id/post_profile"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_margin="4dp"
+                    app:riv_corner_radius="2dp"
+                />
+
+                <TextView
+                    android:id="@+id/post_name"
+                    android:layout_width="0px"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:ellipsize="end"
+                    android:lines="1"
+                    android:text="Test teset fdsf dsf df"
+                    android:textSize="12sp"/>
+
+
+                <com.linute.linute.UtilsAndHelpers.ToggleImageView
+                    android:id="@+id/checkbox"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_margin="4dp"
+                    android:src="@drawable/ic_fire_on"
+                />
+
+            </LinearLayout>
+
+        </LinearLayout>
 
         <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end">
+            android:layout_gravity="end"
+        >
 
             <TextView
                 android:id="@+id/chat_user_message"
@@ -81,14 +129,14 @@
                 android:padding="12dp"
                 android:textColor="@color/pure_white"
                 android:textSize="@dimen/body_font_size"
-                tools:text="test dfsdf sdf fsdf sdf ddf df " />
+                tools:text="test dfsdf sdf fsdf sdf ddf df "/>
 
             <ImageView
                 android:id="@+id/read_receipt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|right"
-                />
+            />
 
         </FrameLayout>
 
