--- a/app/src/main/res/layout/fragment_chat_list_item_me.xml
+++ b/app/src/main/res/layout/fragment_chat_list_item_me.xml
@@ -44,53 +44,71 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.linute.linute.UtilsAndHelpers.SquareFrameLayout
-            android:id="@+id/frame"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_gravity="end"
-            android:visibility="gone">
-
-            <com.makeramen.roundedimageview.RoundedImageView
-                android:id="@+id/image"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:scaleType="centerCrop"
-                app:riv_corner_radius="@dimen/user_icon_corner_radius" />
-
-            <ImageView
-                android:id="@+id/cinema_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_cinema" />
-
-        </com.linute.linute.UtilsAndHelpers.SquareFrameLayout>
-
-        <FrameLayout
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="end">
+            android:gravity="right"
+            >
 
-            <TextView
-                android:id="@+id/chat_user_message"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:autoLink="web|email"
-                android:background="@drawable/chat_item_me"
-                android:padding="12dp"
-                android:textColor="@color/pure_white"
-                android:textSize="@dimen/body_font_size"
-                tools:text="test dfsdf sdf fsdf sdf ddf df " />
 
             <ImageView
-                android:id="@+id/read_receipt"
+                android:id="@+id/chat_error_indicator"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|right"
+                android:layout_height="match_parent"
+                android:src="@mipmap/ic_message_not_sent"
+                android:layout_gravity="right"
+                android:padding="8dp"
+                android:visibility="gone"
                 />
 
-        </FrameLayout>
+            <com.linute.linute.UtilsAndHelpers.SquareFrameLayout
+                android:id="@+id/frame"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_gravity="right"
+                android:visibility="gone">
+
+                <com.makeramen.roundedimageview.RoundedImageView
+                    android:id="@+id/image"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:scaleType="centerCrop"
+                    app:riv_corner_radius="@dimen/user_icon_corner_radius" />
+
+                <ImageView
+                    android:id="@+id/cinema_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_cinema" />
+
+            </com.linute.linute.UtilsAndHelpers.SquareFrameLayout>
+
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right">
+
+                <TextView
+                    android:id="@+id/chat_user_message"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:autoLink="web|email"
+                    android:background="@drawable/chat_item_me"
+                    android:padding="12dp"
+                    android:textColor="@color/pure_white"
+                    android:textSize="@dimen/body_font_size"
+                    tools:text="test dfsdf sdf fsdf sdf ddf df " />
+
+                <ImageView
+                    android:id="@+id/read_receipt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|right" />
+
+            </FrameLayout>
+        </LinearLayout>
+
 
     </FrameLayout>
 
