--- a/app/src/main/res/layout/activity_new_post_create.xml
+++ b/app/src/main/res/layout/activity_new_post_create.xml
@@ -71,6 +71,23 @@
             tools:text="HELLO THEREHELLO THEREHELLO THEREHELLO THERE "
         />
 
+        <!--edit text still shows red underline on some phones-->
+        <com.linute.linute.UtilsAndHelpers.NoSuggestionsTextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:gravity="center_vertical"
+            android:maxLines="8"
+            android:textColor="#000000"
+            android:textSize="28sp"
+            android:textStyle="italic"
+            android:visibility="gone"
+        />
+
     </com.linute.linute.UtilsAndHelpers.SquareFrameLayout>
 
 
@@ -225,9 +242,9 @@
         android:id="@+id/options"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="12dp"
         android:gravity="center"
         android:orientation="horizontal"
-        android:layout_marginBottom="12dp"
         android:weightSum="2"
     >
 
