--- a/app/src/main/res/layout/fragment_feed_detail_page_list_item.xml
+++ b/app/src/main/res/layout/fragment_feed_detail_page_list_item.xml
@@ -105,13 +105,14 @@
         android:orientation="horizontal">
 
 
-        <de.hdodenhof.circleimageview.CircleImageView
+        <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/comment_user_image"
             android:layout_width="@dimen/profile_image_radius"
             android:layout_height="@dimen/profile_image_radius"
             android:layout_margin="@dimen/activity_horizontal_margin"
-            app:civ_border_color="@color/seperator_color"
-            app:civ_border_width="1dp"
+            app:riv_border_color="@color/seperator_color"
+            app:riv_border_width="1dp"
+            app:riv_corner_radius="@dimen/user_icon_corner_radius"
         />
 
         <LinearLayout
