--- a/app/src/main/res/layout/fragment_rooms_list_item.xml
+++ b/app/src/main/res/layout/fragment_rooms_list_item.xml
@@ -57,7 +57,7 @@
 
     <LinearLayout
         android:id="@+id/feed_end_layer"
-        android:layout_width="32dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:orientation="vertical">
@@ -67,7 +67,8 @@
             android:layout_width="wrap_content"
             android:layout_height="32dp"
             android:layout_weight="1"
-            android:text="now"
+            android:text="12:30 PM"
+            android:lines="1"
             android:textColor="@color/twentyfive_black"
             android:textSize="@dimen/sub_font_size"
             android:gravity="center_vertical" />
