--- a/app/src/main/res/layout/material_search_toolbar.xml
+++ b/app/src/main/res/layout/material_search_toolbar.xml
@@ -15,6 +15,7 @@
             android:layout_weight="1"
             android:background="@null"
             android:hint="Search"
+            android:imeOptions="actionDone"
             android:lines="1"
             android:singleLine="true"/>
 
