--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -91,4 +91,9 @@
     <style name="TextAppearence.App.TextInputLayout" parent="@android:style/TextAppearance">
         <item name="android:textColor">@color/red</item>
     </style>
+
+    <style name="fragment_chat_subtext">
+        <item name="android:textColor">#ff9b9b9b</item>
+        <item name="android:textSize">12sp</item>
+    </style>
 </resources>
