--- a/app/src/main/res/layout/fragment_chat_list_item_me.xml
+++ b/app/src/main/res/layout/fragment_chat_list_item_me.xml
@@ -56,6 +56,7 @@
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:scaleType="centerCrop"
+                android:maxWidth="266dp"
                 app:riv_corner_radius="@dimen/user_icon_corner_radius" />
 
             <ImageView
@@ -80,6 +81,7 @@
                 android:background="@drawable/chat_item_me"
                 android:padding="@dimen/chat_message_bubble_padding"
                 android:textColor="@color/pure_white"
+                android:maxWidth="266dp"
                 android:textSize="@dimen/body_font_size"
                 tools:text="test dfsdf sdf fsdf sdf ddf df " />
 
