--- a/app/src/main/res/layout/toolbar_chat.xml
+++ b/app/src/main/res/layout/toolbar_chat.xml
@@ -4,13 +4,13 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal">
+    android:gravity="left">
     <!--this space is necessary so that the chat image doesn't get cut, not sure why-->
-    <Space
+   <!-- <Space
         android:id="@+id/space_actions_item_balancer"
         android:layout_gravity="left"
         android:layout_width="16dp"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent" />-->
     <!--<com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/toolbar_chat_user_icon"
         android:layout_width="@dimen/profile_image_radius"
@@ -26,14 +26,13 @@
         android:id="@+id/toolbar_chat_name"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
+        android:layout_gravity="left"
         android:gravity="center_vertical"
         android:textSize="16sp"
         android:textColor="@color/pure_white"
-        android:paddingLeft="4dp"
         android:ellipsize="end"
         android:maxLines="1"
-        />
+        android:layout_marginLeft="24dp" />
     <!--balances out "up" arrow, making room information to be properly centered-->
     <Space
         android:layout_gravity="right"
