--- a/app/src/main/res/layout/fragment_chat_settings_add_user.xml
+++ b/app/src/main/res/layout/fragment_chat_settings_add_user.xml
@@ -6,29 +6,29 @@
     android:background="?android:selectableItemBackground"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:paddingRight="16dp"
+    android:paddingLeft="16dp">
 
     <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/search_users_list_image"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_gravity="center_vertical"
-        android:padding="4dp"
-        android:layout_margin="16dp"
-        />
+        android:padding="8dp"
+        android:layout_margin="0dp"
+        android:layout_marginRight="24dp" />
 
     <TextView
         android:id="@+id/search_users_list_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center_vertical"
-        android:layout_marginTop="@dimen/activity_horizontal_margin"
-        android:layout_marginBottom="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:ellipsize="end"
         android:lines="1"
         android:textSize="16sp"
+        android:paddingLeft="16dp"
         tools:text="fdsf sfsdf sf dsffdsf sfsdf sf dsffdsf sfs"
-        />
+        android:gravity="center_vertical" />
 
 </LinearLayout>
