--- a/app/src/main/res/layout/list_item_user_w_college.xml
+++ b/app/src/main/res/layout/list_item_user_w_college.xml
@@ -7,42 +7,40 @@
               android:layout_height="wrap_content"
               android:background="?android:selectableItemBackground"
               android:clickable="true"
-              android:orientation="horizontal"
-              android:paddingBottom="20dp"
-              android:paddingLeft="16dp"
-              android:paddingRight="16dp"
-              android:paddingTop="20dp">
+              android:orientation="horizontal">
 
     <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/search_users_list_image"
         android:layout_width="@dimen/profile_image_radius"
         android:layout_height="@dimen/profile_image_radius"
+        android:layout_margin="@dimen/activity_horizontal_margin"
         app:riv_corner_radius="@dimen/user_icon_corner_radius"/>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="@dimen/activity_horizontal_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
         android:gravity="center_vertical"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/search_users_list_name"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:ellipsize="end"
             android:lines="1"
             android:textColor="@color/eighty_black"
             android:textSize="16sp"
-            tools:text="fdsf sfsdf sf dsffdsf sfsdf sf dsffdsf sfs"/>
+            tools:text="fdsf sfsdf sf dsffdsf sfsd asdasd f sf dsffdsf sfs"/>
 
         <TextView
             android:id="@+id/text_college"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:ellipsize="end"
             android:lines="1"
             android:textSize="14sp"
