new chat attach icon

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -74,8 +74,9 @@
             android:layout_height="40dp"
             android:layout_gravity="bottom"
             android:layout_margin="4dp"
+            android:padding="8dp"
             android:background="?attr/selectableItemBackground"
-            android:src="@drawable/ic_upload_picture"/>
+            android:src="@mipmap/ic_chat_attach"/>
 
         <EditText
             android:id="@+id/message_input"
