fixed icons, changed typing action to gif, and other bug fixes

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -109,7 +109,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_above="@+id/message_container"
-        android:background="@color/chat_subtext"
+        android:background="@color/seperator_color"
     />
 
     <LinearLayout
