--- a/app/src/main/res/layout/fragment_chat_list_item_action_typing.xml
+++ b/app/src/main/res/layout/fragment_chat_list_item_action_typing.xml
@@ -1,36 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_alignParentStart="true"
-    android:layout_marginBottom="4dp"
-    android:layout_marginEnd="48dp"
-    android:layout_marginStart="12dp"
-    android:layout_marginTop="4dp"
-    android:orientation="horizontal">
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_alignParentStart="true"
+              android:layout_marginBottom="4dp"
+              android:layout_marginEnd="48dp"
+              android:layout_marginStart="64dp"
+              android:layout_marginTop="4dp"
+              android:background="@drawable/chat_item_you"
+              android:orientation="horizontal">
 
-    <com.makeramen.roundedimageview.RoundedImageView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        
+    <ImageView
+        android:id="@+id/gif"
+        android:layout_width="48dp"
+        android:layout_height="32dp"
         android:padding="4dp"
-        android:visibility="invisible"
-        app:riv_corner_radius="@dimen/user_icon_corner_radius"
-        />
+        tools:src="@drawable/typing_three_dots_android"
+    />
 
-    <TextView
-        android:id="@+id/chat_user_message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/chat_item_you"
-        android:orientation="vertical"
-        android:paddingEnd="12dp"
-        android:paddingStart="12dp"
-        android:text="..."
-        android:textColor="@color/eighty_black"
-        android:textSize="20sp"
-        android:textStyle="bold" />
 
 </LinearLayout>
 
