--- a/app/src/main/res/layout/fragment_rooms_list_item.xml
+++ b/app/src/main/res/layout/fragment_rooms_list_item.xml
@@ -83,7 +83,7 @@
                 android:layout_marginStart="16dp"
                 android:padding="@dimen/activity_horizontal_margin"
                 android:scaleType="centerInside"
-                android:src="@mipmap/ic_chat_muted"
+                android:src="@drawable/ic_chat_muted"
                 android:visibility="visible"/>
 
 
